build/log/idf_py_stderr_output_18725
/home/danny/esp-idf/projects/wireless-spoof/main/wireless-spoof.c: In function 'event_handler':
/home/danny/esp-idf/projects/wireless-spoof/main/wireless-spoof.c:19:17: error: implicit declaration of function 'wifi_connect'; did you mean 'esp_wifi_connect'? [-Wimplicit-function-declaration]
   19 |                 wifi_connect();
      |                 ^~~~~~~~~~~~
      |                 esp_wifi_connect
/home/danny/esp-idf/projects/wireless-spoof/main/wireless-spoof.c:20:48: error: macro "ESP_LOGI" requires 3 arguments, but only 1 given
   20 |                 ESP_LOGI("Connecting to wifi..");
      |                                                ^
In file included from /home/danny/esp-idf/projects/wireless-spoof/main/wireless-spoof.c:4:
/home/danny/esp-idf/components/log/include/esp_log.h:114:9: note: macro "ESP_LOGI" defined here
  114 | #define ESP_LOGI( tag, format, ... ) ESP_LOG_LEVEL_LOCAL(ESP_LOG_INFO,    tag, format, ##__VA_ARGS__)
      |         ^~~~~~~~
/home/danny/esp-idf/projects/wireless-spoof/main/wireless-spoof.c:20:17: error: 'ESP_LOGI' undeclared (first use in this function); did you mean 'ESP_LOG_MAX'?
   20 |                 ESP_LOGI("Connecting to wifi..");
      |                 ^~~~~~~~
      |                 ESP_LOG_MAX
/home/danny/esp-idf/projects/wireless-spoof/main/wireless-spoof.c:20:17: note: each undeclared identifier is reported only once for each function it appears in
/home/danny/esp-idf/projects/wireless-spoof/main/wireless-spoof.c:23:51: error: macro "ESP_LOGI" requires 3 arguments, but only 1 given
   23 |                 ESP_LOGI("Reconnecting to wifi...");
      |                                                   ^
/home/danny/esp-idf/components/log/include/esp_log.h:114:9: note: macro "ESP_LOGI" defined here
  114 | #define ESP_LOGI( tag, format, ... ) ESP_LOG_LEVEL_LOCAL(ESP_LOG_INFO,    tag, format, ##__VA_ARGS__)
      |         ^~~~~~~~
/home/danny/esp-idf/projects/wireless-spoof/main/wireless-spoof.c: In function 'app_main':
/home/danny/esp-idf/projects/wireless-spoof/main/wireless-spoof.c:56:23: warning: unused variable 'wifi_cfg' [-Wunused-variable]
   56 |         wifi_config_t wifi_cfg = {
      |                       ^~~~~~~~
/home/danny/esp-idf/projects/wireless-spoof/main/wireless-spoof.c:51:19: warning: unused variable 'netif' [-Wunused-variable]
   51 |         esp_err_t netif = esp_netif_init();
      |                   ^~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:76: esp-idf/main/CMakeFiles/__idf_main.dir/wireless-spoof.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:5672: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
